--- a/src/fluent/styles/fluent.less
+++ b/src/fluent/styles/fluent.less
@@ -1,6 +1,8 @@
 html body {
 	margin: 0;
 	height: 100%;
+	background: #424242;
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 @media screen and (max-width: 640px) {
