--- a/src/fluent/styles/animations.less
+++ b/src/fluent/styles/animations.less
@@ -39,11 +39,9 @@
 
 @keyframes tileSlideUp {
 	0% {
-		transform: translateY(0);
+		padding-top: 0;
 	}
 	100% {
-		transform: translateY(50%);
+		padding-top: -50%;
 	}
 }
-
-@keyframes empty {}
