--- a/src/fluent/elements/tile/fluent-tile.less
+++ b/src/fluent/elements/tile/fluent-tile.less
@@ -14,6 +14,8 @@ fluent-tile {
 	height: @tileSize;
 	padding: @tilePadding;
 
+	cursor: pointer;
+
 	&.small {
 		width: @smallTileSize;
 		height: @smallTileSize;
