--- a/src/fluent/styles/fluent.less
+++ b/src/fluent/styles/fluent.less
@@ -1,24 +1,17 @@
-html body {
-	margin: 0;
-	height: 100%;
-	background: #424242;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
-}
-
 @media screen and (max-width: 640px) {
-	body {
+	.fluent-view {
 		padding: 12px;
 	}
 }
 
 @media screen and (max-width: 1008px) and (min-width: 640px) {
-	body {
+	.fluent-view {
 		padding: 24px;
 	}
 }
 
 @media screen and (min-width: 1008px) {
-	body {
+	.fluent-view {
 		padding: 24px;
 	}
 }
