--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -1,6 +1,9 @@
-html body {
+html, body, div[aurelia-app="main"] {
 	margin: 0;
 	height: 100%;
+}
+
+body {
 	background: #424242;
 	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
