--- a/src/fluent/elements/tile-group/fluent-tile-group.less
+++ b/src/fluent/elements/tile-group/fluent-tile-group.less
@@ -2,24 +2,24 @@
 @import '../../styles/animations.less';
 
 fluent-tile-group {
-	.display-name {
+	> .display-name {
 		color: white;
 		margin-bottom: 10px;
 		font-size: 22px;
+	}
+
+	&.wide .tiles {
+		grid-template-columns: repeat(6, 72px);
+	}
+
+	&.double.wide .tiles {
+		grid-template-columns: repeat(8, 72px);
 	}
 
 	.tiles {
 		display: grid;
 		grid-template-columns: repeat(4, 72px);
 		grid-gap: @tileMargin * 2;
-
-		&.wide {
-			grid-template-columns: repeat(6, 72px);
-		}
-
-		&.double.wide {
-			grid-template-columns: repeat(8, 72px);
-		}
 
 		> * {
 			grid-column: auto / span 2;
