--- a/src/fluent/styles/animations.less
+++ b/src/fluent/styles/animations.less
@@ -28,12 +28,21 @@
 	}
 }
 
-@keyframes tileFlip {
+@keyframes tileFlipY {
 	0% {
 		transform: rotateY(0deg);
 	}
 	100% {
 		transform: rotateY(180deg);
+	}
+}
+
+@keyframes tileFlipX {
+	0% {
+		transform: rotateX(0deg);
+	}
+	100% {
+		transform: rotateX(180deg);
 	}
 }
 
