--- a/src/fluent/styles/fluent.less
+++ b/src/fluent/styles/fluent.less
@@ -1,17 +1,23 @@
+fluent-hub {
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: nowrap;
+	overflow-x: auto;
+
+	> * {
+		margin-right: 40px;
+	}
+}
+
+.fluent-view {
+	height: 100%;
+	box-sizing: border-box;
+	padding: 24px;
+}
+
 @media screen and (max-width: 640px) {
 	.fluent-view {
 		padding: 12px;
-	}
-}
-
-@media screen and (max-width: 1008px) and (min-width: 640px) {
-	.fluent-view {
-		padding: 24px;
-	}
-}
-
-@media screen and (min-width: 1008px) {
-	.fluent-view {
-		padding: 24px;
 	}
 }
