--- a/src/fluent/elements/tile-group/fluent-tile-group.less
+++ b/src/fluent/elements/tile-group/fluent-tile-group.less
@@ -16,7 +16,7 @@ fluent-tile-group {
 		grid-template-columns: repeat(8, 72px);
 	}
 
-	.tiles {
+	> .tiles {
 		display: grid;
 		grid-template-columns: repeat(4, 72px);
 		grid-gap: @tileMargin * 2;
