--- a/src/views/start.less
+++ b/src/views/start.less
@@ -33,5 +33,10 @@
 	}
 	> :last-child {
 		background-image: url('../../wwwroot/assets/images/tiles/mal-back.png');
+		box-shadow: inset 0px -35px 0px #2e51a1
 	}
+}
+
+#test {
+	background-image: url('../../wwwroot/assets/images/tiles/mal-logo.png');
 }
