--- a/src/views/start.less
+++ b/src/views/start.less
@@ -1,3 +1,16 @@
+#blurb {
+	color: white;
+	width: 300px;
+
+	.title {
+		margin-bottom: 0.5em;
+	}
+
+	a {
+		color: white;
+	}
+}
+
 #stackoverflow-tile {
 	> :first-child {
 		background-color: #f48024;
@@ -37,6 +50,12 @@
 	}
 }
 
-#test {
-	background-image: url('../../wwwroot/assets/images/tiles/mal-logo.png');
+#discord-tile {
+	> :first-child {
+		background-color: #7289da;
+	}
+	> :last-child {
+		background: linear-gradient(to bottom, #7289da 0%,#7289da 50%,#1e2124 51%,#1e2124 100%);
+		padding: 0;
+	}
 }
