--- a/src/fluent/styles/fluent.less
+++ b/src/fluent/styles/fluent.less
@@ -1,3 +1,5 @@
+@import 'typography.less';
+
 fluent-hub {
 	height: 100%;
 	display: flex;
@@ -7,6 +9,7 @@ fluent-hub {
 
 	> * {
 		margin-right: 40px;
+		flex: none;
 	}
 }
 
