fleshed out contact form

--- a/src/fluent/elements/button/fluent-button.less
+++ b/src/fluent/elements/button/fluent-button.less
@@ -1,10 +1,17 @@
 fluent-button {
+	background-color: #ccc;
+
 	& > button {
 		font-size: inherit;
 		box-sizing: border-box;
 		height: 40px;
 		padding: 0 12px;
 		border: none;
-		background-color: #ccc;
+		outline: none;
+		background-color: transparent;
+	}
+
+	&:hover {
+		background-color: #ddd;
 	}
 }
