--- a/src/styles/theme.less
+++ b/src/styles/theme.less
@@ -5,5 +5,6 @@ html, body, div[aurelia-app="main"] {
 
 body {
 	background: #424242;
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+	font-size: 15px;
 }
