--- a/src/fluent/elements/applet-host/fluent-applet-host.less
+++ b/src/fluent/elements/applet-host/fluent-applet-host.less
@@ -15,6 +15,8 @@ fluent-applet-host {
 		ux-dialog {
 			width: 100%;
 			height: 100%;
+			display: flex;
+			flex-direction: column;
 			padding: 0;
 			box-sizing: border-box;
 			border-color: @accentColor;
@@ -38,11 +40,17 @@ fluent-applet-host {
 					color: white;
 					height: 30px;
 					width: 45px;
+					margin: 0;
 
 					&:hover {
 						background-color: @cancelColor;
 					}
 				}
+			}
+
+			ux-dialog-body {
+				flex: 1 1 auto;
+				overflow-y: auto;
 			}
 		}
 	}
