--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using WebApplicationBasic
+@using CuddleBunnyPortfolio
 @addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
 @addTagHelper "*, Microsoft.AspNetCore.SpaServices"
