more tiles, contact page validation WIP

--- a/src/views/start.html
+++ b/src/views/start.html
@@ -38,6 +38,7 @@
 			<fluent-tile id="twitter-tile" class="small" icon="fab fa-twitter" onclick="window.open('https://twitter.com/TheCuddleBunny')"></fluent-tile>
 			<fluent-tile id="reddit-tile" role="link" aria-label="Reddit" class="small" icon="fab fa-reddit-alien" onclick="window.open('https://www.reddit.com/user/CuddleBunny3')"></fluent-tile>
 			<fluent-tile id="gitter-tile" class="small" icon="fab fa-gitter" onclick="window.open('https://gitter.im/CuddleBunny')"></fluent-tile>
+			<fluent-tile id="steam-tile" class="small" icon="fab fa-steam" onclick="window.open('https://steamcommunity.com/id/thecuddlebunny')"></fluent-tile>
 		</fluent-tile-group>
 	</fluent-hub>
 
