new tile colors

--- a/src/views/start.html
+++ b/src/views/start.html
@@ -3,7 +3,7 @@
 	<fluent-hub class="fluent-view">
 		<section id="blurb">
 			<div class="title">Hi! I'm Josh.</div>
-			<p class="body">I am a <a>developer</a>, <a>gamer</a>, <a href="https://myanimelist.net/profile/CuddleBunny">otaku</a>, <a>adventurer</a>, <a>technologist</a>, and <a>dad</a>.</p>
+			<p class="body">I am a <a>developer</a>, <a href="https://steamcommunity.com/id/thecuddlebunny">gamer</a>, <a href="https://myanimelist.net/profile/CuddleBunny">otaku</a>, <a>adventurer</a>, <a>technologist</a>, and <a>dad</a>.</p>
 			<p class="body">I specialize in web development and the .NET ecosystem.</p>
 		</section>
 		<fluent-tile-group display-name="Developer" class="wide au-animate">
