re-style contact page

--- a/src/fluent/styles/variables.less
+++ b/src/fluent/styles/variables.less
@@ -1,6 +1,9 @@
+// TODO - replace with colors from aurelia-office-ui-fabric?
+
 @accentColor: #2475BF;
 @accentTextColor: white;
 @cancelColor: #D71526;
+@errorMessageColor: rgba(232, 17, 35, .2);
 
 @tileMargin: 3px;
 
