--- a/src/views/applets/contact.less
+++ b/src/views/applets/contact.less
@@ -1,13 +1,31 @@
-.applet.contact {
-	ux-dialog-body {
+@import '../../fluent/styles/variables.less';
+
+fluent-applet.contact {
+	background-color: white;
+
+	ul {
+		background-color: @errorMessageColor;
+		margin: 0;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+
+	.body {
 		display: flex;
 		flex-direction: column;
+		overflow: hidden;
 
 		> div {
+			flex: 0 0 auto;
 			display: flex;
+			border-bottom: 1px solid #ccc;
 
 			input {
 				flex-grow: 1;
+				border: none;
+				outline: none;
+				height: 40px;
+				padding: 0 10px;
 			}
 
 			fluent-button {
@@ -20,18 +38,8 @@
 			}
 		}
 
-		input {
-			border: none;
-			outline: none;
-		}
-
-		> div, > input {
-			border-bottom: 1px solid gray;
-			height: 40px;
-		}
-
 		quill-editor {
-			flex-grow: 1;
+			flex: 1 1 auto;
 			display: flex;
 			flex-direction: column;
 
@@ -40,13 +48,12 @@
 			}
 
 			.ql-toolbar.ql-snow {
-				border-bottom: 1px solid gray;
+				border-bottom: 1px solid #ccc;
 			}
 
 			.ql-container.ql-snow {
-				flex-grow: 1;
+				overflow: auto;
 			}
 		}
 	}
-
 }
