make start page responsive

--- a/src/views/start.html
+++ b/src/views/start.html
@@ -6,7 +6,7 @@
 			<p class="body">I am a <a>developer</a>, <a href="https://steamcommunity.com/id/thecuddlebunny">gamer</a>, <a href="https://myanimelist.net/profile/CuddleBunny">otaku</a>, <a>adventurer</a>, <a>technologist</a>, and <a>dad</a>.</p>
 			<p class="body">I specialize in web development and the .NET ecosystem.</p>
 		</section>
-		<fluent-tile-group display-name="Developer" class="wide au-animate">
+		<fluent-tile-group display-name="Developer" class="au-animate">
 			<fluent-live-tile id="stackoverflow-tile" class="wide" animation="flip-x">
 				<fluent-tile display-name="Stack Overflow" icon="fab fa-stack-overflow"></fluent-tile>
 				<fluent-tile onclick="window.open('http://stackoverflow.com/users/434512/cuddlebunny')">
