--- a/src/views/start.less
+++ b/src/views/start.less
@@ -2,6 +2,11 @@
 	color: white;
 	width: 300px;
 
+	@media screen and (max-width: 640px) {
+		width: 100%;
+		box-sizing: border-box;
+	}
+
 	.title {
 		margin-bottom: 0.5em;
 	}
