--- a/src/views/start.html
+++ b/src/views/start.html
@@ -7,6 +7,7 @@
 			<p class="body">I specialize in web development and the .NET ecosystem.</p>
 		</section>
 		<fluent-tile-group display-name="Developer" class="au-animate">
+			<fluent-tile display-name="Work" class="wide" icon="fal fa-code" click.delegate="work()"></fluent-tile>
 			<fluent-live-tile id="stackoverflow-tile" class="wide" animation="flip-x">
 				<fluent-tile display-name="Stack Overflow" icon="fab fa-stack-overflow"></fluent-tile>
 				<fluent-tile onclick="window.open('http://stackoverflow.com/users/434512/cuddlebunny')">
@@ -16,7 +17,6 @@
 
 			<fluent-tile id="github-tile" icon="fab fa-github" display-name="GitHub" onclick="window.open('https://github.com/CuddleBunny')"></fluent-tile>
 			<fluent-tile display-name="Resume" icon="fal fa-file-alt" onclick="window.open('assets/resume.pdf')"></fluent-tile>
-			<fluent-tile display-name="Work" icon="fal fa-code" onclick="alert('coming soon')"></fluent-tile>
 		</fluent-tile-group>
 
 		<fluent-tile-group class="wide au-animate" display-name="Connect">
