--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,9 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>@ViewData["Title"] - Aurelia</title>
-
-        <link rel="stylesheet" href="~/dist/vendor.css" asp-append-version="true" />
+        <title>Portfolio | Josh Dovishaw</title>
     </head>
     <body>
         @RenderBody()
